fixed spacing

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     align-items: center; /* Centers content vertically */
     justify-content: center; /* Centers content horizontally */
-
+    overflow-x: hidden;
 }
 
 .ceiling {
@@ -36,7 +36,7 @@ section {
 footer {
     text-align: center;
     width: 100%;
-    margin-top: 60px;
+    padding-top: 60px;
     padding-bottom: 60px;
 }
 
